2023-11-04T08:11:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6753695237 # 2052
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 776 1430 / 794 1463
* notice: next accum: outdated-unq outdated-all / unq all: 776 1430 / 795 1464
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-21 2023-11-04]

2023-11-04T00:42:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6751623059 # 2051
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 774 1427 / 794 1462
* notice: next accum: outdated-unq outdated-all / unq all: 776 1430 / 794 1463
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-20] / [2023-11-03]

2023-11-03T08:12:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6742738499 # 2049
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 774 1427 / 793 1461
* notice: next accum: outdated-unq outdated-all / unq all: 774 1427 / 794 1462
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-11-03T00:43:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6739873703 # 2048