@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-04T08:11:06Z",
-  "count_outdated" : 1430,
-  "uniques_outdated" : 776,
-  "count" : 1464,
+  "timestamp" : "2023-11-05T00:47:10Z",
+  "count_outdated" : 1432,
+  "uniques_outdated" : 777,
+  "count" : 1465,
   "uniques" : 795,
   "clones" : [
-    {
-      "timestamp": "2023-10-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-22T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-11-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
