@@ -1,3 +1,12 @@
+2023-11-05T00:47:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6758160545 # 2054
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 776 1430 / 795 1464
+* notice: next accum: outdated-unq outdated-all / unq all: 777 1432 / 795 1465
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-10-21] / [2023-11-04]
+
 2023-11-04T08:11:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6753695237 # 2052
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
